@@ -92,6 +92,8 @@ Version 1.11.0+svn:
      default to the active name/description if omitted.
    * Fix a bug with [store_time_of_day] so that it treats the provided variable
      as a container instead of an array (overwrite instead of append).
+   * Added [side]suppress_end_turn_confirmation= for those (rather nonstandard)
+     scenarios where players often skip their turns.
  * Miscellaneous and bug fixes:
    * Fix invalid memory access crash resulting from deleting all saved games
      in the Load Game dialog
